# SINEDIT3

./: CMakeLists.txt  build.yml
.github/workflows/: main.yml
SinDecomposer/: CMakeLists.txt  README.md
SinDecomposer/include/: editor.h  fft.h  partial.h  plugcontroller.h  plugids.h  plugprocessor.h  version.h
SinDecomposer/src/: editor.cpp  fft.cpp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
